tests/fixtures/valid/advanced/float_operations.py
# Float operations with various types
x: float = 3.14
y: float = 2.0

# Basic ops
print(x + y)
print(x - y)
print(x * y)
print(x / y)
print(x // y)
print(x % y)
print(x ** y)

# Comparisons
print(x > y)
print(x < y)
print(x >= y)
print(x <= y)
print(x == y)
print(x != y)

# Unary
print(-x)
print(+x)
