tests/fixtures/invalid/float_bitwise_ops.py
# Test bitwise AND on float (should fail)
x: float = 3.14
y: float = 2.71
result: float = x & y
